--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -3,5 +3,12 @@
 // Just copy a variable from src/sass/assets/bootstrap5/_variables.scss, paste it here and edit the value.
 
 
-$purple: #5533ff; // Thats a sample how you could change a BootStrap variable.
-$primary: $purple;  // Once we've changed the value, we'll also make it the primary brand color.
+$primary: #103C5A;
+$secondary: #F7C906;
+$success: #98D5D7;
+$danger: #DD2C2C;
+
+$navbar-light-color: rgba($primary, .55) !default;
+$navbar-dark-color: rgba($secondary, .55) !default;
+
+$bg-primary: $danger
